--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.1",
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@mui/styled-engine": "^7.3.6",
+    "@mui/x-date-pickers": "^8.21.0",
     "apexcharts": "3.44.0",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
+    "react-datepicker": "^9.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "6.17.0"
