--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@mui/material": "^7.3.6",
     "@mui/styled-engine": "^7.3.6",
     "@mui/x-date-pickers": "^8.21.0",
     "apexcharts": "3.44.0",
