--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vite export"
+    "build": "vite build",
     "host": true,
     "preview": "vite preview"
   },
